--- a/config/user-service-dev.yml
+++ b/config/user-service-dev.yml
@@ -5,46 +5,16 @@ sp:
 spring:
   application:
     name: user-service
-#server:
-#  port: 8101
+server:
+  port: 8101
   
 eureka:
   client:
     service-url:
       defaultZone: http://eureka1:2001/eureka
       
----
-spring:
-  profiles: user1
-  
-server:
-  port: 8101
-  
-  
----
-spring:
-  profiles: user2
-  
-server:
-  port: 8102
-  
----
-spring:
-  profiles: user3
-  
-server:
-  port: 8103
-  
----
-spring:
-  profiles: user4
-  
-server:
-  port: 8104
-  
----
-spring:
-  profiles: user5
-  
-server:
-  port: 8105
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh
