--- a/config/user-service-dev.yml
+++ b/config/user-service-dev.yml
@@ -13,8 +13,8 @@ eureka:
     service-url:
       defaultZone: http://eureka1:2001/eureka
       
-management:
-  endpoints:
-    web:
-      exposure:
-        include: refresh
+#management:
+#  endpoints:
+#    web:
+#      exposure:
+#        include: refresh
