--- a/config/user-service-dev.yml
+++ b/config/user-service-dev.yml
@@ -5,15 +5,14 @@ sp:
 spring:
   application:
     name: user-service
-    
 server:
   port: 8101
   
 eureka:
   client:
     service-url:
-      defaultZone: http://eureka1:2001/eureka, http://eureka1:2002/eureka
-
+      defaultZone: http://eureka1:2001/eureka
+      
 management:
   endpoints:
     web:
