--- a/config/zuul-dev.yml
+++ b/config/zuul-dev.yml
@@ -2,40 +2,43 @@ spring:
   application:
     name: zuul
   rabbitmq:
-    host: 192.168.64.140
+    host: 192.168.64.5
     port: 5672
     username: admin
     password: admin
     
-    
 server:
   port: 3001
-  
+
 eureka:
   client:
     service-url:
       defaultZone: http://eureka1:2001/eureka, http://eureka2:2002/eureka
 
+#zuul:
+#  routes:
+#    item-service: /item-serivce/**
+#    user-service: /user-serivce/**
+#   order-service: /order-serivce/**
+    
+    
 zuul:
-  routes:
-    item-service: /item-service/**
-    user-service: /user-service/**
-    order-service: /order-service/**
+  retryable: true
 
-  retryable: true   #启用重试
-  
-ribbon:
-  ConnectTimeout: 1000
-  ReadTimeout: 1000
-  MaxAutoRetriesNextServer: 1
-  MaxAutoRetries: 1
-  
-  hystrix:
-  command:
-    default:
-      execution:
-        isolation:
-          thread:
-            timeoutInMilliseconds: 2500
-        
-management:  endpoints:    web:      exposure:        include: hystrix.stream
+#ribbon:
+#  MaxAutoRetries: 0
+#  MaxAutoRetriesNextServer: 1
+    
+management:
+  endpoints:
+    web:
+      exposure:
+        include: hystrix.stream
+    
+    
+    
+    
+    
+    
+    
+    
